WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313151
[:has()] Fix failures in css/selectors/invalidation/has-sibling-insertion-removal.html
https://bugs.webkit.org/show_bug.cgi?id=313151
Summary
[:has()] Fix failures in css/selectors/invalidation/has-sibling-insertion-rem...
Antti Koivisto
Reported
2026-04-23 11:09:32 PDT
Invalidation fixes for sibling combinators.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-23 11:10:36 PDT
<
rdar://problem/175441568
>
Antti Koivisto
Comment 2
2026-04-23 11:50:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63450
EWS
Comment 3
2026-04-23 13:55:52 PDT
Committed
311893@main
(a7c33784e49f): <
https://commits.webkit.org/311893@main
> Reviewed commits have been landed. Closing PR #63450 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug