Source/WebCore/style/RuleFeature.cpp
@@ -41,6 +41,8 @@
 namespace WebCore {
 namespace Style {
 
+enum class CanBreakScope : bool { No, Yes };
+
 static bool NODELETE isSiblingOrSubject(MatchElement::Relation relation)
 {
     switch (relation) {
@@ -202,6 +204,24 @@ MatchElement::HasRelation computeHasArgumentRelation(const CSSSelector& hasSelec
     return toHasRelation(relation);
 }
 
+static bool isSiblingCombinator(CSSSelector::Relation relation)
+{
+    return relation == CSSSelector::Relation::DirectAdjacent || relation == CSSSelector::Relation::IndirectAdjacent;
+}
+
+// Whether a combinator inside a logical combination (:is()/:not()) within :has()
+// reaches outside the :has() scope.
+static bool isHasScopeBreakingCombinator(CSSSelector::Relation relation, MatchElement::HasRelation hasRelation)
+{
+    if (hasRelation == MatchElement::HasRelation::ScopeBreaking)
+        return false;
+    if (relation == CSSSelector::Relation::DescendantSpace || relation == CSSSelector::Relation::Child)
+        return hasRelation != MatchElement::HasRelation::Child || relation != CSSSelector::Relation::Child;
+    if (isSiblingCombinator(relation))
+        return isSiblingOrSubject(hasRelation);
+    return false;
+}
+
 static MatchElement computeSubSelectorMatchElement(MatchElement matchElement, const CSSSelector& selector, const CSSSelector& childSelector)
 {
     if (selector.match() == CSSSelector::Match::PseudoClass) {
@@ -238,6 +258,8 @@ struct RuleFeatureSet::RecursiveCollectionContext {
     IsNegation isNegation { IsNegation::No };
     CanBreakScope canBreakScope { CanBreakScope::No };
     const CSSSelector* outerCompoundSelector { nullptr };
+    // When walking the direct :has() argument chain. Not set inside nested :is()/:not().
+    const CSSSelector* hasPseudoClass { nullptr };
 };
 
 void RuleFeatureSet::collectFeaturesFromSelector(SelectorFeatures& selectorFeatures, const CSSSelector& selector, MatchElement matchElement)
@@ -245,13 +267,27 @@ void RuleFeatureSet::collectFeaturesFromSelector(SelectorFeatures& selectorFeatu
     recursivelyCollectFeaturesFromSelector(selectorFeatures, selector, { matchElement });
 }
 
-DoesBreakScope RuleFeatureSet::recursivelyCollectFeaturesFromSelector(SelectorFeatures& selectorFeatures, const CSSSelector& firstSelector, const RecursiveCollectionContext& context)
+void RuleFeatureSet::recursivelyCollectFeaturesFromSelector(SelectorFeatures& selectorFeatures, const CSSSelector& firstSelector, const RecursiveCollectionContext& context)
 {
     auto matchElement = context.matchElement;
-    auto doesBreakScope = DoesBreakScope::No;
     const CSSSelector* selector = &firstSelector;
+    bool isRightmostCompound = true;
+
+    // When walking a direct :has() argument chain, emit hasPseudoClasses entries for the rightmost
+    // compound and compounds whose combinator to the left is a sibling combinator. Child mutations
+    // can break sibling adjacency, so ChildChangeInvalidation needs entries keyed on these compounds.
+    auto collectHasPseudoClassFeatureIfNeeded = [&] {
+        if (!context.hasPseudoClass || selector->match() == CSSSelector::Match::HasScope)
+            return;
+        if (!isRightmostCompound && !isSiblingCombinator(selector->relation()))
+            return;
+        auto scopeSource = context.outerCompoundSelector ? context.outerCompoundSelector : context.hasPseudoClass;
+        selectorFeatures.hasPseudoClasses.append({ selector, matchElement, context.isNegation, scopeSource });
+    };
+
     while (true) {
         auto canBreakScope = context.canBreakScope;
+
         if (selector->match() == CSSSelector::Match::Id) {
             idsInRules.add(selector->value());
             if (matchElement.relation == MatchElement::Relation::Parent || matchElement.relation == MatchElement::Relation::Ancestor)
@@ -277,6 +313,8 @@ DoesBreakScope RuleFeatureSet::recursivelyCollectFeaturesFromSelector(SelectorFe
                 canBreakScope = CanBreakScope::Yes;
         }
 
+        collectHasPseudoClassFeatureIfNeeded();
+
         if (const CSSSelectorList* selectorList = selector->selectorList()) {
             auto subSelectorIsNegation = context.isNegation;
             if (selector->match() == CSSSelector::Match::PseudoClass && selector->pseudoClass() == CSSSelector::PseudoClass::Not)
@@ -285,24 +323,22 @@ DoesBreakScope RuleFeatureSet::recursivelyCollectFeaturesFromSelector(SelectorFe
             for (auto& subSelector : *selectorList) {
                 auto subResult = computeSubSelectorMatchElement(matchElement, *selector, subSelector);
 
-                RecursiveCollectionContext subContext { subResult, subSelectorIsNegation, canBreakScope, context.outerCompoundSelector };
+                RecursiveCollectionContext subContext { subResult, subSelectorIsNegation, canBreakScope, context.outerCompoundSelector, context.hasPseudoClass };
 
                 // When entering a logical combination (not :has() itself), record the outer compound
                 // so nested :has() can use it for scope selector extraction.
+                // Also clear hasPseudoClass so per-compound entries are only emitted at the
+                // direct :has() argument level, not inside nested :is()/:not().
                 if (selector->match() == CSSSelector::Match::PseudoClass && isLogicalCombinationPseudoClass(selector->pseudoClass()) && selector->pseudoClass() != CSSSelector::PseudoClass::Has) {
                     if (!subContext.outerCompoundSelector)
                         subContext.outerCompoundSelector = selector;
+                    subContext.hasPseudoClass = nullptr;
                 }
 
-                auto pseudoClassDoesBreakScope = recursivelyCollectFeaturesFromSelector(selectorFeatures, subSelector, subContext);
+                if (selector->match() == CSSSelector::Match::PseudoClass && selector->pseudoClass() == CSSSelector::PseudoClass::Has)
+                    subContext.hasPseudoClass = selector;
 
-                if (selector->match() == CSSSelector::Match::PseudoClass && selector->pseudoClass() == CSSSelector::PseudoClass::Has) {
-                    auto scopeSource = context.outerCompoundSelector ? context.outerCompoundSelector : selector;
-                    selectorFeatures.hasPseudoClasses.append({ &subSelector, subResult, context.isNegation, pseudoClassDoesBreakScope, scopeSource });
-                }
-
-                if (pseudoClassDoesBreakScope == DoesBreakScope::Yes)
-                    doesBreakScope = DoesBreakScope::Yes;
+                recursivelyCollectFeaturesFromSelector(selectorFeatures, subSelector, subContext);
             }
         }
 
@@ -310,34 +346,17 @@ DoesBreakScope RuleFeatureSet::recursivelyCollectFeaturesFromSelector(SelectorFe
             break;
 
         auto relation = selector->relation();
+        isRightmostCompound = false;
+
         matchElement.relation = computeNextRelation(matchElement.relation, relation);
 
-        // Detect scope-breaking inside :has() arguments.
-        // When inside :has() and a logical combinator like :is() allows scope breaking,
-        // combinators can reach outside the :has() scope.
-        if (matchElement.hasRelation && *matchElement.hasRelation != MatchElement::HasRelation::ScopeBreaking && context.canBreakScope == CanBreakScope::Yes) {
-            if (relation == CSSSelector::Relation::DescendantSpace || relation == CSSSelector::Relation::Child) {
-                // For :has(> :is(.x > .y)), the child combinator inside :is() is still scoped to the direct child's tree.
-                // Only mark as scope-breaking if the has argument isn't a direct child, or the combinator is a descendant space.
-                if (matchElement.hasRelation != MatchElement::HasRelation::Child || relation != CSSSelector::Relation::Child) {
-                    matchElement.hasRelation = MatchElement::HasRelation::ScopeBreaking;
-                    doesBreakScope = DoesBreakScope::Yes;
-                }
-            }
-            if (relation == CSSSelector::Relation::IndirectAdjacent || relation == CSSSelector::Relation::DirectAdjacent) {
-                // :has(~ :is(.x ~ .y)) — sibling combinator inside :is() when :has() has sibling traversal.
-                // Widens to any-sibling search and is scope-breaking (elements outside :has() scope can be affected).
-                if (isSiblingOrSubject(*matchElement.hasRelation)) {
-                    matchElement.hasRelation = MatchElement::HasRelation::ScopeBreaking;
-                    doesBreakScope = DoesBreakScope::Yes;
-                }
-            }
+        if (matchElement.hasRelation && context.canBreakScope == CanBreakScope::Yes && isHasScopeBreakingCombinator(relation, *matchElement.hasRelation)) {
+            matchElement.hasRelation = MatchElement::HasRelation::ScopeBreaking;
+            selectorFeatures.containsScopeBreakingHasPseudoClass = true;
         }
 
         selector = selector->precedingInComplexSelector();
     };
-
-    return doesBreakScope;
 }
 
 PseudoClassInvalidationKey makePseudoClassInvalidationKey(CSSSelector::PseudoClass pseudoClass, InvalidationKeyType keyType, const AtomString& keyString)
@@ -489,7 +508,7 @@ void RuleFeatureSet::collectFeatures(CollectionContext& collectionContext, const
     }
 
     for (auto& entry : selectorFeatures.hasPseudoClasses) {
-        auto& [selector, matchElement, isNegation, doesBreakScope, hasPseudoClass] = entry;
+        auto& [selector, matchElement, isNegation, hasPseudoClass] = entry;
         // The selector argument points to a selector inside :has() selector list instead of :has() itself.
         auto& featureVector = *hasPseudoClassRules.ensure(makePseudoClassInvalidationKey(CSSSelector::PseudoClass::Has, *selector), [] {
             return makeUnique<Vector<RuleFeatureWithInvalidationSelector>>();
@@ -503,12 +522,12 @@ void RuleFeatureSet::collectFeatures(CollectionContext& collectionContext, const
             CSSSelectorParser::makeHasScopeSelector(*hasPseudoClass)
         });
 
-        if (doesBreakScope == DoesBreakScope::Yes)
-            scopeBreakingHasPseudoClassRules.append({ ruleData });
-
         setUsesRelation(matchElement.relation);
         usesHasPseudoClass = true;
     }
+
+    if (selectorFeatures.containsScopeBreakingHasPseudoClass)
+        scopeBreakingHasPseudoClassRules.append({ ruleData });
 }
 
 void RuleFeatureSet::collectPseudoElementFeatures(const RuleData& ruleData)
